--- a/main.css
+++ b/main.css
@@ -3,13 +3,29 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Inter", sans-serif;
 }
 
 h1 {
-  text-align: center;
-  font-size: 24px;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 50px;
   padding: 25px;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 15px;
+  border-bottom: 5px solid white;
+}
+
+header {
+  text-align: center;
+}
+
+header p {
+  font-weight: 200;
 }
 
 main {
@@ -19,11 +35,15 @@ main {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
 }
 
 main .score p {
-  font-size: 24px;
+  font-weight: 100;
+  font-size: 50px;
 }
 
 main #game {
@@ -42,7 +62,7 @@ main #game {
 
 main #game button {
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,7 +72,7 @@ main #game button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 900;
   font-size: 80px;
 }
 
@@ -111,7 +131,6 @@ main #game #bottom-right {
 }
 
 .highlighted {
-  -webkit-text-decoration: underline lime;
-          text-decoration: underline lime;
+  border-bottom: 5px solid lime;
 }
 /*# sourceMappingURL=main.css.map */
