--- a/main.scss
+++ b/main.scss
@@ -2,27 +2,41 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Inter", sans-serif;
 }
 
 h1 {
-  text-align: center;
-  font-size: 24px;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 50px;
   padding: 25px;
 }
 
 h2 {
-        
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 15px;
+  border-bottom: 5px solid white;
+}
+
+header {
+  text-align: center;
+
+  p {
+    font-weight: 200;
+  }
 }
 
 main {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   text-align: center;
 
   .score {
     p {
-      font-size: 24px;
+      font-weight: 100;
+      font-size: 50px;
     }
   }
 
@@ -41,11 +55,11 @@ main {
 
     button {
       cursor: pointer;
-      border-radius: 5px;
+      border-radius: 10px;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 900;
       font-size: 80px;
     }
 
@@ -88,5 +102,5 @@ main {
 }
 
 .highlighted {
-    text-decoration: underline lime;
+  border-bottom: 5px solid lime;
 }
